samples/_failures_safe/1761196680_cb43dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcff4ab8.c: In function ‘main’:
./samples/SAFE/__tmp_bcff4ab8.c:194:12: error: missing terminating " character
  194 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_bcff4ab8.c:194:5: error: expected expression at end of input
  194 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_bcff4ab8.c:194:5: error: expected declaration or statement at end of input
